[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/Voxel-Core/engine/BottomPanel/VoxelLayersView/VoxelLayersView.gd" type="Script" id=1]
[ext_resource path="res://addons/Voxel-Core/assets/VoxelLayeredMesh.png" type="Texture" id=2]
[ext_resource path="res://addons/Voxel-Core/assets/BottomPanel/add.png" type="Texture" id=3]

[node name="VoxelLayersView" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -856.0
margin_bottom = -450.0
rect_min_size = Vector2( 0, 150 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 187.0
margin_bottom = 143.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 180.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 173.0
margin_bottom = 31.0

[node name="Label" type="ToolButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 72.0
margin_bottom = 24.0
text = "Layers"
icon = ExtResource( 2 )

[node name="Search" type="LineEdit" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 76.0
margin_right = 134.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Search layer name / ID..."

[node name="Add" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 138.0
margin_right = 166.0
margin_bottom = 24.0
hint_tooltip = "Add layer"
icon = ExtResource( 3 )

[node name="AddDialog" type="WindowDialog" parent="VBoxContainer/PanelContainer/HBoxContainer/Add"]
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 75 )
window_title = "Add Layer"

[node name="Control" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/Add/AddDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/Add/AddDialog/Control"]
margin_top = 2.0
margin_right = 180.0
margin_bottom = 26.0

[node name="Name" type="LineEdit" parent="VBoxContainer/PanelContainer/HBoxContainer/Add/AddDialog/Control/HBoxContainer"]
margin_right = 180.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "New layer name..."

[node name="Confirm" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/Add/AddDialog/Control"]
margin_top = 30.0
margin_right = 180.0
margin_bottom = 52.0
text = "Add layer"
icon = ExtResource( 3 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 180.0
margin_bottom = 46.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 180.0
margin_bottom = 136.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 180.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/ScrollContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 173.0
margin_bottom = 79.0
color = Color( 0, 0, 0, 0.0980392 )

[node name="Layers" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 173.0
margin_bottom = 79.0
[connection signal="text_changed" from="VBoxContainer/PanelContainer/HBoxContainer/Search" to="." method="_on_Search_changed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="text_changed" from="VBoxContainer/PanelContainer/HBoxContainer/Add/AddDialog/Control/HBoxContainer/Name" to="." method="_on_AddName_text_changed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Add/AddDialog/Control/Confirm" to="." method="_on_AddConfirm_pressed"]
